--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "cordova-plugin-whitelist": "1.3.1",
         "cordova-plugin-x-socialsharing": "^5.1.8",
         "cordova-promise-polyfill": "0.0.2",
+        "cordova-sqlite-storage": "^2.3.2",
         "css-animator": "^2.1.1",
         "de.appplant.cordova.plugin.local-notification": "^0.8.5",
         "de.appplant.cordova.plugin.printer": "^0.7.3",
